Name:                lrucache
Version:             1.2.0.0
Synopsis:            a simple, pure LRU cache
License:             BSD3
License-file:        LICENSE
Author:              Carl Howells
Maintainer:          chowells79@gmail.com
Copyright:           Carl Howells, 2010-2015
Homepage:            http://github.com/chowells79/lrucache
Stability:           Experimental
Category:            Data
Build-type:          Simple
Description:
        This package contains a simple, pure LRU cache, implemented in
        terms of "Data.Map".
        .
        It also contains a mutable IO wrapper providing atomic updates to
        an LRU cache.

Extra-source-files:
        LICENSE
        README
        MemTest.hs
        OpTest.hs
        Setup.hs
        changes.txt

Cabal-version:       >=1.10

Source-repository this
  type:              git
  location:          https://github.com/chowells79/lrucache.git
  tag:               1.2.0.0

Library
  Exposed-modules:
        Data.Cache.LRU
        Data.Cache.LRU.Internal
        Data.Cache.LRU.IO
        Data.Cache.LRU.IO.Internal

  Build-depends:
        base >= 4 && < 5,
        containers >= 0.2 && < 0.6,
        contravariant >= 0.5 && < 2


  GHC-options:  -Wall -O2

  HS-source-dirs: src
  default-language: Haskell2010

test-suite unittests
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: unittests
  build-depends: lrucache, base, hspec, hspec-core, QuickCheck, Cabal
  default-language: Haskell2010
